fix bug 241187 combo box shows up unexpectly due to nsWindow::IsVisible() does not return the right value. patched by robin.lu@sun.com r=blizzard sr=bryner